# wasp_summer_school_CB_2023

./: .gitignore  INFO.md  docker.sh  env.sh  pyproject.toml  runme.ipynb  utils.py
environment/: base-packages.sh  dockerfile.cpu
simulation/: conveyor_kitting.py
